# Shooting_club

./: main.py  pyproject.toml
audio/: no_audio.m4a
bot/: __init__.py  bot_control.py  dispatcher.py  middleware.py
database/: __init__.py  models.py
handlers/: __init__.py  abyss.py  basic.py  branch_1.py  branch_2.py  branch_3.py  commands.py  person_statistic.py
markups/: __init__.py  specific.py  text_messages.py
markups/core/: __init__.py  core_keyboards.py  core_photo_messages.py  core_text_messages.py  core_voice_messages.py
tools/: __init__.py  emoji.py  loggers.py
utils/: apschduler.py  redis.py
